Fixed some SonarLint, added JavaDoc and restructured the Builder